[project]
name = "linkedin-contacts-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "ahmad-selim59",email = "ahmad22selim@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "playwright (>=1.55.0,<2.0.0)"
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
